# tancred

./: README.md
00_engineering/00_mechanics/: parts.md
00_engineering/00_mechanics/design/: main_structure.stl  secondary_structure.stl
00_engineering/00_mechanics/doc/: material.md  parts.md
00_engineering/01_electronics/arduino/: sample_program.ino
00_engineering/01_electronics/arduino/sample_program/: sample_program.ino
00_engineering/01_electronics/doc/: RC_car.txt
00_engineering/02_software/: CMakeLists.txt
00_engineering/02_software/00_intermediate_demo/: index.js  package-lock.json  package.json  setup.sh
00_engineering/02_software/00_intermediate_demo/arduino/: arduino.ino
00_engineering/02_software/00_intermediate_demo/public/: script.js
00_engineering/02_software/00_intermediate_demo/views/: index.pug
00_engineering/02_software/01_final_project/: CMakeLists.txt  connect_everything.sh  connect_for_autopilot.sh  setup_network.txt
00_engineering/02_software/01_final_project/app/: CMakeLists.txt
00_engineering/02_software/01_final_project/app/actuators/: CMakeLists.txt  main.cpp
00_engineering/02_software/01_final_project/app/autopilot/: CMakeLists.txt  main.cpp
00_engineering/02_software/01_final_project/app/camerainterface/: CMakeLists.txt  main.cpp
00_engineering/02_software/01_final_project/app/humandriver/: CMakeLists.txt  Config.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h  main.cpp
00_engineering/02_software/01_final_project/app/humansupervisor/: CMakeLists.txt
00_engineering/02_software/01_final_project/app/motorsinterface/: CMakeLists.txt  main.cpp
00_engineering/02_software/01_final_project/app/pseudocamera/: CMakeLists.txt  main.cpp
00_engineering/02_software/01_final_project/app/recorder/: CMakeLists.txt  Constants.h  Handler.cpp  Handler.h  InternalMessages.h  main.cpp
00_engineering/02_software/01_final_project/app/sensors/: CMakeLists.txt
00_engineering/02_software/01_final_project/app/wizard/: CMakeLists.txt  ControllerWidget.cpp  ControllerWidget.h  Dataset.cpp  Dataset.h  LCMInterface.cpp  LCMInterface.h  LCMThread.cpp  LCMThread.h  MainWindow.cpp  MainWindow.h  RobotInterface.cpp  RobotInterface.h  VideoWidget.cpp  VideoWidget.h  main.cpp  resources.qrc
00_engineering/02_software/01_final_project/arduino/: arduino.ino
00_engineering/02_software/01_final_project/src/: CMakeLists.txt
00_engineering/02_software/01_final_project/src/communication/: CMakeLists.txt  types.lcm
00_engineering/02_software/01_final_project/src/core/: AutopilotMessage.cpp  AutopilotMessage.h  CMakeLists.txt  ImageMessage.cpp  ImageMessage.h  MotorsMessage.cpp  MotorsMessage.h  common.h  constants.h  tmp.cpp
00_engineering/02_software/01_final_project/tools/: 00_build_refined_from_raw.py  01_split_into_train_test_bad.py  02_train.py
00_engineering/02_software/app/: CMakeLists.txt
cad/: secondary_structure.stl  structure.stl
